syntax = "proto3";

option go_package = "../pb";


service Lear {
  rpc FetchEventsOn(FetchIncidentRequest) returns (stream Incident);
  rpc FetchIncidentsOn(FetchIncidentRequest) returns (stream Incident);
  rpc FetchBirthsOn(FetchIncidentRequest) returns (stream Incident);
  rpc FetchDeathsOn(FetchIncidentRequest) returns (stream Incident);
  rpc FetchHolidaysOn(FetchIncidentRequest) returns (stream Incident);
}

message FetchIncidentRequest {
  int64 month = 2;
  int64 day = 3;
}

message Incident {
  int64 year = 1;
  int64 month = 2;
  int64 day = 3;
  IncidentType incident_type = 4;
  string summary = 5;
  string incident_in_detail = 6;
}

enum IncidentType {
  INCIDENT_TYPE_UNSPECIFIED = 0;
  INCIDENT_TYPE_EVENT = 1;
  INCIDENT_TYPE_BIRTH = 2;
  INCIDENT_TYPE_DEATH = 3;
  INCIDENT_TYPE_HOLIDAY = 4;
}
